[package]
edition      = "2021"
name         = "esp-app2"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "esp-app2"
path = "./src/bin/main.rs"

[dependencies]
# esp32
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "defmt",
  "esp32s3",
  "unstable",
] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
esp-backtrace = { version = "0.17.0", features = [
  "defmt",
  "esp32s3",
  "exception-handler",
  "panic-handler",
] }
esp-println = { version = "0.15.0", features = ["defmt-espflash", "esp32s3"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32s3"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "wifi",
] }

# embassy
embassy-executor = { version = "0.7", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.5", features = ["defmt"] }
embassy-net = { version = "0.7.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"

static_cell = "2.1.1"
cfg-if = "1.0.3"
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
